<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/simpleExoPlayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/cheesecake" />

</LinearLayout>
    <TextView
        android:layout_margin="30dp"
        android:id="@+id/stepdescriptionTextView"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:textSize="24sp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/previousButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Previous"
            />
        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Next"
            />
    </LinearLayout>
</LinearLayout>