<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ingreadientsButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/INGREDIENTS_BUTTON_TITLE"
        android:layout_margin="10dp" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/stepsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
</LinearLayout>